--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Ana Sayfa
       - href: about.qmd
         text: Hakkında
+      - href: notlar.qmd
+        text: Notlar
 format:
   html:
     theme: cosmo
